--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf dist",
     "prebuild": "npm run -s clean",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV='production' webpack --progress --profile --colors",
+    "build": "cross-env NODE_ENV='production' webpack --progress --profile",
     "start": "cross-env NODE_ENV='production' node index"
   },
   "repository": {
@@ -42,10 +42,10 @@
     "cross-env": "^7.0.3",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "5.5.0",
     "rimraf": "^3.0.2",
-    "webpack": "^4.45.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "5.74.0",
+    "webpack-cli": "4.10.0",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-s3-plugin": "^1.0.3"
   }
